static/css/main.css
/* ... */
.navbar-custom .avatar-container  .avatar-img {
  width: 100%;
  border-radius: 50%;
  display: block;
}

.navbar-custom.top-nav-short .avatar-container{
  opacity: 0;
}

.navbar-custom.top-nav-expanded .avatar-container  {
  display: none;
}

@media only screen and (min-width: 768px) {
  .navbar-custom .avatar-container {
    width: 100px;
    margin-top: -50px;
  }

  .navbar-custom .avatar-container  .avatar-img-border {
    width: 100%;
    box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
  }

  .navbar-custom .avatar-container  .avatar-img {
    width: 100%;
  }
}

/* Multi-level navigation links */
.navbar-custom .nav .navlinks-container {
  position: relative;
}
.navbar-custom .nav .navlinks-parent:after {
  content: " \25BC";
}
.navbar-custom .nav .navlinks-children {
  width: 100%;
  display: none;
  word-break: break-word;
}
.navbar-custom .nav .navlinks-container .navlinks-children a {
  display: block;
  padding: 10px;
  padding-left: 30px;
  background: #2c3e50;
  text-decoration: none !important;
  border-width: 0 1px 1px 1px;
  font-weight: normal;
}
@media only screen and (max-width: 767px) {
  .navbar-custom .nav .navlinks-container.show-children {
    background: #27323e;
  }
  .navbar-custom .nav .navlinks-container.show-children .navlinks-children {
    display: block;
  }
}
@media only screen and (min-width: 768px) {
  .navbar-custom .nav .navlinks-container {
    text-align: center;
  }
  .navbar-custom .nav .navlinks-container:hover {
    background: #27323e;
  }
  .navbar-custom .nav .navlinks-container:hover .navlinks-children {
    display: block;
  }
  .navbar-custom .nav .navlinks-children {
    position: absolute;
  }
  .navbar-custom .nav .navlinks-container .navlinks-children a {
    padding-left: 10px;
    border: 1px solid #eaeaea;
    border-width: 0 1px 1px;
  }
}

/* --- Footer --- */

footer {
  padding: 30px 0;
  background: #F5F5F5;
  border-top: 1px #EAEAEA solid;
  margin-top: auto;
  font-size: 14px;
}

footer a {
  color: #404040;
}

footer .list-inline {
  margin: 0;
  padding: 0;
}
footer .copyright {
  font-family: 'Raleway', sans-serif;
  text-align: center;
  margin-bottom: 0;
}
footer .theme-by {
  text-align: center;
  margin: 10px 0 0;
}

@media only screen and (min-width: 768px) {
  footer {
    padding: 50px 0;
  }
  footer .footer-links {
    font-size: 18px;
  }
  footer .copyright {
    font-size: 16px;
  }
}

/* --- Post preview --- */

.post-preview {
  padding: 20px 0;
  border-bottom: 1px solid #eee;
}

@media only screen and (min-width: 768px) {
  .post-preview {
    padding: 35px 0;
  }
}

.post-preview:last-child {
  border-bottom: 0;
}

.post-preview a {
  text-decoration: none;
  color: #404040;
}

.post-preview a:focus,
.post-preview a:hover {
  text-decoration: none;
  color: #0085a1;
}

.post-preview .post-title {
  font-size: 30px;
  margin-top: 0;
}
.post-preview .post-subtitle {
  margin: 0;
  font-weight: 300;
  margin-bottom: 10px;
}
.post-preview .post-meta,
.post-heading .post-meta {
  color: #808080;
  font-size: 18px;
  font-style: italic;
  margin: 0 0 10px;
}
.post-preview .post-meta a,
.post-heading .post-meta a {
  color: #404040;
  text-decoration: none;
}
.post-preview .post-entry {
  font-family: 'Raleway', sans-serif;
}
.post-entry-container {
  display: inline-block;
  width: 100%;
}
.post-entry {
  width: 100%;
  margin-top: 10px;
}
.post-image {
  float: right;
  height: 192px;
  width: 192px;
  margin-top: -35px;
  filter: grayscale(90%);
}
.post-image:hover {
  filter: grayscale(0%);
}
.post-image img {
  border-radius: 100px;
  height: 192px;
  width: 192px;
}
.post-preview .post-read-more {
  font-weight: 800;
  float: right;
}

@media only screen and (min-width: 768px) {
  .post-preview .post-title {
    font-size: 36px;
  }
}

/* --- Tags --- */

.blog-tags {
  font-family: 'Raleway', sans-serif;
  color: #999;
  font-size: 15px;
  margin-bottom: 30px;
}

.blog-tags:before {
  content: "Tags: ";
}

.blog-tags a {
  color: #008AFF;
  text-decoration: none;
  padding: 0px 5px;
}

.blog-tags a:before {
  content: "#";
}

.blog-tags a:hover {
  border-radius: 2px;
  color: #008AFF;
  background-color: #CCC;
}

.post-preview .blog-tags {
  margin-top: 5px;
  margin-bottom: 0;
}

@media only screen and (min-width: 768px) {
  .post-preview .blog-tags {
    margin-top: 10px;
  }
}

@media only screen and (max-width: 500px) {
  .post-image, .post-image img {
    height: 100px;
    width: 100px;
  }

  .post-image {
    width: 100%;
    text-align: center;
    margin-top: 0;
    float: left;
  }
}
/* --- Post and page headers --- */

.intro-header {
  margin: 80px 0 20px;
  position: relative;
}
.intro-header.big-img {
  background: no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  margin-top: 51px; /* The small navbar is 50px tall + 1px border */
  margin-bottom: 35px;
}
.intro-header.big-img  .big-img-transition {
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0;
  background: no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  -webkit-transition: opacity 1s linear;
  -moz-transition: opacity 1s linear;
  transition: opacity 1s linear;
}
.intro-header .page-heading,
.intro-header .tags-heading {
  text-align: center;
}
.intro-header.big-img .page-heading,
.intro-header.big-img .post-heading {
  padding: 100px 0;
  color: #FFF;
  text-shadow: 1px 1px 3px #000;
}
.intro-header .page-heading h1,
.intro-header .tags-heading h1 {
  margin-top: 0;
  font-size: 50px;
}
.intro-header .post-heading h1 {
  margin-top: 0;
  font-size: 35px;
}
/* ... */

